# arneb

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  deny.toml  docker-compose.yml  release-please-config.json  trino-survey.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  deny.yml  docs.yml  release.yml
benchmarks/tpch/: Cargo.toml  README.md  tpch-config.toml  tpch-hive.toml  tpch-sf001.toml
benchmarks/tpch/queries/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q16.sql  q19.sql
benchmarks/tpch/scripts/: generate_data.sh  generate_parquet.py  generate_sf001.py  generate_sf001.sh  report.py  run_benchmark.sh  run_trino.sh
benchmarks/tpch/src/: main.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  diagnostic.rs  error.rs  identifiers.rs  lib.rs  stream.rs  types.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: file.rs  lib.rs  memory.rs  parquet_pushdown.rs  storage.rs  traits.rs
crates/execution/: Cargo.toml
crates/execution/src/: aggregate.rs  datasource.rs  distributed.rs  expression.rs  hash_join.rs  lib.rs  operator.rs  optimizer.rs  planner.rs  scalar_subquery.rs  scan_context.rs  semi_join.rs  set_ops.rs  window.rs
crates/execution/src/functions/: date.rs  math.rs  mod.rs  registry.rs  string.rs
crates/hive/: Cargo.toml
crates/hive-metastore/: .gitattributes  Cargo.toml  README.md
crates/hive-metastore/src/: lib.rs
crates/hive-metastore/thrift_build/: Cargo.toml
crates/hive-metastore/thrift_build/src/: main.rs
crates/hive-metastore/thrift_idl/: PATCHES.md  SOURCES.md  hive_metastore.thrift
crates/hive/src/: catalog.rs  datasource.rs  lib.rs  types.rs
crates/planner/: Cargo.toml
crates/planner/src/: fragment.rs  lib.rs  optimizer.rs  plan.rs  planner.rs
crates/planner/src/analyzer/: cast_scalar.rs  coercion_matrix.rs  mod.rs  type_coercion.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: encoding.rs  error.rs  handler.rs  lib.rs  metadata.rs  server.rs  session.rs
crates/protocol/tests/: integration.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: exchange_client.rs  flight_service.rs  heartbeat.rs  lib.rs  output_buffer.rs  task_descriptor.rs  task_submission.rs
crates/rpc/tests/: flight_integration.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  node_registry.rs  resource_group.rs  state.rs  tracker.rs
crates/server/: Cargo.toml
crates/server/frontend/: app.js  index.html  style.css
crates/server/frontend/assets/: index-BOBJPzGS.css  index-CmFGYxnJ.js
crates/server/src/: config.rs  coordinator.rs  main.rs  task_manager.rs
crates/server/src/web/: api.rs  frontend.rs  mod.rs
crates/server/tests/: integration.rs
crates/sql-parser/: Cargo.toml
crates/sql-parser/src/: ast.rs  convert.rs  lib.rs
docker/hive-metastore/: Dockerfile  metastore-site.xml
docker/tpch-seed/: seed.sh
docker/trino/catalog/: hive.properties
docs/: CNAME  contributing.md  index.md  package.json
docs/.vitepress/: config.ts
docs/architecture/: overview.md
docs/connectors/: file.md  hive.md  object-store.md  overview.md
docs/guide/: configuration.md  distributed.md  introduction.md  quickstart.md
docs/public/: CNAME
docs/sql/: advanced.md  expressions.md  functions.md  overview.md
openspec/changes/advanced-dql/: design.md  proposal.md  tasks.md
openspec/changes/ansi-expressions/: design.md  proposal.md  tasks.md
openspec/changes/ast-source-spans/: proposal.md
openspec/changes/async-catalog/: design.md  proposal.md  tasks.md
openspec/changes/async-streaming-execution/: design.md  proposal.md  tasks.md
openspec/changes/benchmark-infra-hive/: design.md  proposal.md  tasks.md
openspec/changes/catalog-system/: design.md  tasks.md
openspec/changes/common-foundation/: design.md  proposal.md
openspec/changes/connector-pushdown/: design.md  proposal.md  tasks.md
openspec/changes/connectors-mvp/: tasks.md
openspec/changes/coordinator-web-ui/: design.md  proposal.md  tasks.md
openspec/changes/coordinator-worker-split/: design.md  proposal.md  tasks.md
openspec/changes/ddl-dml-connector-delegated/: design.md  proposal.md  tasks.md
openspec/changes/distributed-operators/: design.md  proposal.md  tasks.md
openspec/changes/distributed-query-execution/: design.md  proposal.md  tasks.md
openspec/changes/execution-engine/: tasks.md
openspec/changes/extended-query-protocol/: design.md  proposal.md  tasks.md
openspec/changes/flight-rpc-layer/: design.md  proposal.md  tasks.md
openspec/changes/hash-join-operator/: design.md  proposal.md  tasks.md
openspec/changes/hive-connector/: design.md  proposal.md  tasks.md
openspec/changes/hms-4x-support/: proposal.md  tasks.md
openspec/changes/logical-plan-optimizer/: design.md  proposal.md  tasks.md
openspec/changes/multi-format-hive-connector/: design.md  proposal.md  tasks.md
openspec/changes/object-store-support/: design.md  proposal.md  tasks.md
openspec/changes/parquet-compression/: design.md  proposal.md  tasks.md
openspec/changes/parquet-reader-optimization/: design.md  proposal.md  tasks.md
openspec/changes/parquet-type-support/: design.md  proposal.md  tasks.md
openspec/changes/pg-catalog-metadata/: design.md  proposal.md  tasks.md
openspec/changes/pg-wire-protocol/: design.md
openspec/changes/plan-fragmentation/: design.md  proposal.md  tasks.md
openspec/changes/planner-type-coercion/: design.md  proposal.md  tasks.md
openspec/changes/query-state-machine/: design.md  proposal.md  tasks.md
openspec/changes/scalar-functions/: design.md  proposal.md  tasks.md
openspec/changes/server-integration/: design.md
scripts/: arneb-hive-demo.toml  hive-e2e-test.sh  integration-test.sh
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/lib/: api.ts  (+2 more)
(+252 files in other folders)
