[workspace]
members = ["crates/common", "crates/sql-parser", "crates/catalog", "crates/planner", "crates/execution", "crates/connectors", "crates/protocol", "crates/server", "crates/scheduler", "crates/rpc"]
exclude = ["benchmarks/tpch"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "Apache-2.0"

[workspace.dependencies]
# Error handling
thiserror = "2"

# Serialization & config
serde = { version = "1", features = ["derive"] }
toml = "1.0"

# Logging & tracing
tracing = "0.1"

# Arrow columnar format
arrow = { version = "58", default-features = false }
arrow-csv = { version = "58", default-features = false }
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }

# Numeric utilities
num_cpus = "1"

# SQL parsing
sqlparser = { version = "0.61", default-features = false, features = ["std"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging subscriber
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling (binary)
anyhow = "1"

# PostgreSQL wire protocol
pgwire = "0.25"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1"
rust-embed = "8"
mime_guess = "2"
