[package]
name = "arneb-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, error handling, and configuration for arneb"

[dependencies]
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
arrow.workspace = true
num_cpus.workspace = true
futures.workspace = true
async-trait.workspace = true
uuid.workspace = true
# `Location` type for source-position-bearing errors. No heavy transitive deps.
sqlparser.workspace = true
codespan-reporting = "0.13"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
