[package]
name = "trino-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
trino-common = { path = "../common" }
trino-catalog = { path = "../catalog" }
trino-execution = { path = "../execution" }
arrow.workspace = true
arrow-csv.workspace = true
parquet.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "=3.14.0"
tokio = { workspace = true, features = ["rt", "macros"] }
