[package]
name = "arneb-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arneb-common = { path = "../common" }
arneb-catalog = { path = "../catalog" }
arneb-execution = { path = "../execution" }
arrow.workspace = true
arrow-csv.workspace = true
parquet.workspace = true
object_store.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
