[package]
name = "trino-execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
trino-common = { path = "../common" }
trino-planner = { path = "../planner" }
trino-sql-parser = { path = "../sql-parser" }
arrow.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
trino-catalog = { path = "../catalog" }
tokio = { workspace = true, features = ["rt", "macros"] }
