[package]
name = "arneb-execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arneb-common = { path = "../common" }
arneb-planner = { path = "../planner" }
arneb-sql-parser = { path = "../sql-parser" }
serde_json.workspace = true
arrow.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
arneb-catalog = { path = "../catalog" }
tokio = { workspace = true, features = ["rt", "macros"] }
