[package]
name = "arneb-hive"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arneb-common = { path = "../common" }
arneb-catalog = { path = "../catalog" }
arneb-connectors = { path = "../connectors" }
arneb-execution = { path = "../execution" }
arrow.workspace = true
parquet.workspace = true
object_store.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
hive-metastore = { path = "../hive-metastore" }
volo-thrift = "0.10"
pilota = "0.11"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
