[package]
name = "arneb-planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arneb-common = { path = "../common" }
arneb-sql-parser = { path = "../sql-parser" }
arneb-catalog = { path = "../catalog" }
# Arrow compute kernels are used at plan time by
# `analyzer::cast_scalar` to fold `Cast(Literal)` into typed literals.
arrow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-recursion.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
