[package]
name = "arneb-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal crates
arneb-common = { path = "../common" }
arneb-sql-parser = { path = "../sql-parser" }
arneb-catalog = { path = "../catalog" }
arneb-planner = { path = "../planner" }
arneb-execution = { path = "../execution" }
arneb-connectors = { path = "../connectors" }

# Arrow columnar format
arrow = { workspace = true }

# Async runtime & networking
tokio = { workspace = true }

# PostgreSQL wire protocol
pgwire = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
chrono = "0.4"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "io-util", "time"] }
pgwire = { workspace = true }
