[package]
name = "arneb-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Arrow Flight RPC layer for inter-node data exchange in arneb"

[dependencies]
arneb-common = { path = "../common" }
arneb-planner = { path = "../planner" }
arrow = { workspace = true }
arrow-flight = "58"
tonic = "0.14"
prost = "0.13"
tokio = { workspace = true, features = ["sync"] }
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-stream = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tokio-stream = "0.1"
arneb-common = { path = "../common" }
