[package]
name = "arneb-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Query/stage/task state machines and scheduling for arneb"

[dependencies]
arneb-common = { path = "../common" }
uuid = { version = "1", features = ["v4"] }
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
