[package]
name = "arneb-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arneb"
path = "src/main.rs"

[dependencies]
# Internal crates
arneb-common = { path = "../common" }
arneb-catalog = { path = "../catalog" }
arneb-connectors = { path = "../connectors" }
arneb-execution = { path = "../execution" }
arneb-planner = { path = "../planner" }
arneb-protocol = { path = "../protocol" }
arneb-scheduler = { path = "../scheduler" }
arneb-rpc = { path = "../rpc" }
arrow = { workspace = true }
async-trait.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "signal", "time"] }
futures.workspace = true
uuid.workspace = true

# CLI argument parsing
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Config
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Web UI
axum = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "io-util", "time", "signal"] }
pgwire = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
tempfile = "3"
