[package]
name = "arneb-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "arneb"
path = "src/main.rs"

[[bin]]
name = "hive-demo-setup"
path = "src/bin/hive_demo_setup.rs"

[dependencies]
# Internal crates
arneb-common = { path = "../common" }
arneb-catalog = { path = "../catalog" }
arneb-connectors = { path = "../connectors" }
arneb-execution = { path = "../execution" }
arneb-planner = { path = "../planner" }
arneb-protocol = { path = "../protocol" }
arneb-scheduler = { path = "../scheduler" }
arneb-rpc = { path = "../rpc" }
arneb-hive = { path = "../hive" }
arrow = { workspace = true }
async-trait.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "signal", "time"] }
futures.workspace = true
uuid.workspace = true

# CLI argument parsing
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Config
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Web UI
axum = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }

# HMS demo setup binary dependencies
hive-metastore = { path = "../hive-metastore" }
volo-thrift = "0.12"
pilota = "0.13"
parquet = { workspace = true, features = ["arrow"] }
object_store.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "io-util", "time", "signal"] }
pgwire = { workspace = true }
arrow = { workspace = true }
tempfile = "3"
arneb-catalog = { path = "../catalog" }
arneb-hive = { path = "../hive" }
arneb-connectors = { path = "../connectors" }
